--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="controls" style="position: absolute; top: 10px; left: 10px; z-index: 2; color: white;">
+        <label for="speed">Speed:</label>
+        <input type="range" id="speed" min="0" max="0.1" step="0.001" value="0.01">
+        <button id="zoom-in">+</button>
+        <button id="zoom-out">-</button>
+        <button id="toggle-zoom">Toggle Follow</button>
+    </div>
     <canvas id="trailCanvas" style="position: absolute; top: 0; left: 0; z-index: 0;"></canvas>
     <canvas id="piCanvas" style="position: absolute; top: 0; left: 0; z-index: 1;"></canvas>
     <script src="script.js"></script>
